# Nodal

./: .firebaserc  .gitignore  README.md  firebase.json  makefile  pyproject.toml
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  context_engine.py  db.py  encryption.py  main.py  models.py
backend/app/routers/: chat.py  keys.py  prompts.py  session.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: AccountPage.tsx  App.tsx  ChatView.tsx  PromptsPanel.tsx  SearchPanel.tsx  Sidebar.tsx  TreeView.tsx  firebase.ts  index.css  types.ts
md/: backend_design.md  description.md
